# google-drive-cowork-plugin

./: .gitignore  .mcp.json  CONNECTORS.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
.claude-plugin/: marketplace.json  plugin.json
commands/: create-doc.md  create-presentation.md  create-spreadsheet.md  replace-section.md
server/: __main__.py  auth.py  config.py  docs_api.py  drive_api.py  errors.py  main.py  paths.py  sheets_api.py  slides_api.py  workspace_client.py
server/tools/: __init__.py  docs.py  sheets.py  slides.py
skills/google-docs/: SKILL.md
skills/google-sheets/: SKILL.md
skills/google-slides/: SKILL.md
